@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,23 +16,24 @@
 
 package org.springframework.test.context.bean.override;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.function.Consumer;
 
-import org.junit.jupiter.api.Nested;
+import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.Test;
 
-import org.springframework.lang.Nullable;
-import org.springframework.test.context.bean.override.BeanOverrideContextCustomizerFactoryTests.Test2.Green;
-import org.springframework.test.context.bean.override.BeanOverrideContextCustomizerFactoryTests.Test2.Orange;
-import org.springframework.test.context.bean.override.DummyBean.DummyBeanOverrideProcessor.DummyOverrideMetadata;
+import org.springframework.test.context.ContextConfigurationAttributes;
+import org.springframework.test.context.bean.override.DummyBean.DummyBeanOverrideProcessor.DummyBeanOverrideHandler;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
 
 /**
  * Tests for {@link BeanOverrideContextCustomizerFactory}.
  *
  * @author Stephane Nicoll
+ * @author Sam Brannen
+ * @since 6.2
  */
 class BeanOverrideContextCustomizerFactoryTests {
 
@@ -47,50 +48,58 @@ class BeanOverrideContextCustomizerFactoryTests {
 	void createContextCustomizerWhenTestHasSingleBeanOverride() {
 		BeanOverrideContextCustomizer customizer = createContextCustomizer(Test1.class);
 		assertThat(customizer).isNotNull();
-		assertThat(customizer.getMetadata()).singleElement().satisfies(dummyMetadata(null, String.class));
+		assertThat(customizer.getBeanOverrideHandlers()).singleElement().satisfies(dummyHandler(null, String.class));
 	}
 
 	@Test
 	void createContextCustomizerWhenNestedTestHasSingleBeanOverrideInParent() {
-		BeanOverrideContextCustomizer customizer = createContextCustomizer(Orange.class);
+		BeanOverrideContextCustomizer customizer = createContextCustomizer(Test2.Orange.class);
 		assertThat(customizer).isNotNull();
-		assertThat(customizer.getMetadata()).singleElement().satisfies(dummyMetadata(null, String.class));
+		assertThat(customizer.getBeanOverrideHandlers()).singleElement().satisfies(dummyHandler(null, String.class));
 	}
 
 	@Test
 	void createContextCustomizerWhenNestedTestHasBeanOverrideAsWellAsTheParent() {
-		BeanOverrideContextCustomizer customizer = createContextCustomizer(Green.class);
+		BeanOverrideContextCustomizer customizer = createContextCustomizer(Test2.Green.class);
 		assertThat(customizer).isNotNull();
-		assertThat(customizer.getMetadata())
-				.anySatisfy(dummyMetadata(null, String.class))
-				.anySatisfy(dummyMetadata("counterBean", Integer.class))
+		assertThat(customizer.getBeanOverrideHandlers())
+				.anySatisfy(dummyHandler(null, String.class))
+				.anySatisfy(dummyHandler("counterBean", Integer.class))
 				.hasSize(2);
 	}
 
-
-	private Consumer<OverrideMetadata> dummyMetadata(@Nullable String beanName, Class<?> beanType) {
-		return dummyMetadata(beanName, beanType, BeanOverrideStrategy.REPLACE_DEFINITION);
+	@Test  // gh-34054
+	void failsWithDuplicateBeanOverrides() {
+		Class<?> testClass = DuplicateOverridesTestCase.class;
+		assertThatIllegalStateException()
+				.isThrownBy(() -> createContextCustomizer(testClass))
+				.withMessageStartingWith("Duplicate BeanOverrideHandler discovered in test class " + testClass.getName())
+				.withMessageContaining("DummyBeanOverrideHandler");
 	}
 
-	private Consumer<OverrideMetadata> dummyMetadata(@Nullable String beanName, Class<?> beanType, BeanOverrideStrategy strategy) {
-		return metadata -> {
-			assertThat(metadata).isExactlyInstanceOf(DummyOverrideMetadata.class);
-			assertThat(metadata.getBeanName()).isEqualTo(beanName);
-			assertThat(metadata.getBeanType().toClass()).isEqualTo(beanType);
-			assertThat(metadata.getStrategy()).isEqualTo(strategy);
+
+	private Consumer<BeanOverrideHandler> dummyHandler(@Nullable String beanName, Class<?> beanType) {
+		return dummyHandler(beanName, beanType, BeanOverrideStrategy.REPLACE);
+	}
+
+	private Consumer<BeanOverrideHandler> dummyHandler(@Nullable String beanName, Class<?> beanType, BeanOverrideStrategy strategy) {
+		return handler -> {
+			assertThat(handler).isExactlyInstanceOf(DummyBeanOverrideHandler.class);
+			assertThat(handler.getBeanName()).isEqualTo(beanName);
+			assertThat(handler.getBeanType().toClass()).isEqualTo(beanType);
+			assertThat(handler.getStrategy()).isEqualTo(strategy);
 		};
 	}
 
-	@Nullable
-	BeanOverrideContextCustomizer createContextCustomizer(Class<?> testClass) {
-		return this.factory.createContextCustomizer(testClass, Collections.emptyList());
+	private @Nullable BeanOverrideContextCustomizer createContextCustomizer(Class<?> testClass) {
+		return this.factory.createContextCustomizer(testClass, List.of(new ContextConfigurationAttributes(testClass)));
 	}
+
 
 	static class Test1 {
 
 		@DummyBean
 		private String descriptor;
-
 	}
 
 	static class Test2 {
@@ -98,18 +107,25 @@ class BeanOverrideContextCustomizerFactoryTests {
 		@DummyBean
 		private String name;
 
-		@Nested
+		// @Nested
 		class Orange {
-
 		}
 
-		@Nested
+		// @Nested
 		class Green {
 
 			@DummyBean(beanName = "counterBean")
 			private Integer counter;
-
 		}
+	}
+
+	static class DuplicateOverridesTestCase {
+
+		@DummyBean(beanName = "text")
+		String text1;
+
+		@DummyBean(beanName = "text")
+		String text2;
 	}
 
 }
